--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/html": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "markdown-it": "^13.0.2",
     "prosemirror-markdown": "^1.11.2",
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3"
