--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tiptap/extension-subscript": "^2.1.12",
     "@tiptap/extension-superscript": "^2.1.12",
     "@tiptap/extension-table": "^2.1.12",
+    "@tiptap/extension-table-cell": "^2.1.12",
+    "@tiptap/extension-table-header": "^2.1.12",
     "@tiptap/extension-table-row": "^2.1.12",
     "@tiptap/extension-task-item": "^2.1.12",
     "@tiptap/extension-task-list": "^2.1.12",
